[project]
name = "gejo-core"
dynamic = ["version"]
description = "workbench for JOIN operations on Earth science datasets"
readme = "README.md"
authors = [
    { name = "Ian Carroll", email = "ian.t.carroll@nasa.gov" }
]
requires-python = ">=3.12"
dependencies = [
    "pystac>=1.14.3",
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
