[project]
name = "gejo-core"
version = "0.1.0.dev1"
description = "workbench for JOIN operations on Earth science datasets"
readme = "README.md"
authors = [
    { name = "Ian Carroll", email = "ian.t.carroll@nasa.gov" }
]
requires-python = ">=3.12"
dependencies = [
    "pystac>=1.14.3",
]

[build-system]
requires = ["uv_build>=0.11.7"]
build-backend = "uv_build"
